[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api-router"
version = "0.1.0"
description = "Local LLM API router with virtual keys, key pools, failover, and SSE passthrough."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.26",
  "PyYAML>=6.0",
  "ruamel.yaml>=0.17",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
  "pytest-asyncio>=0.21",
]

[project.scripts]
llm-router = "llm_api_router.cli:main"

[tool.setuptools.packages.find]
include = ["llm_api_router*"]

[tool.setuptools.package-data]
llm_api_router = ["static/ui/**/*"]
